Add features   * 초기화 파라미터 학습   * ServletContext 학습   * ServletContextListener 학습

--- a/PracticeJSP/WebContent/WEB-INF/web.xml
+++ b/PracticeJSP/WebContent/WEB-INF/web.xml
@@ -10,12 +10,41 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
+  <listener>
+  	<listener-class>com.javalec.ex.ServletL</listener-class>
+  </listener>
+  
+  <context-param>
+     <param-name>id</param-name>
+     <param-value>abc</param-value>
+   </context-param>
+   <context-param>
+     <param-name>pw</param-name>
+     <param-value>123</param-value>
+   </context-param>
+  
   <servlet>
-  	<servlet-name>hello</servlet-name>
-  	<servlet-class>com.javalec.ex.HelloWorld</servlet-class>
+    <servlet-name>hello</servlet-name>
+    <servlet-class>com.javalec.ex.HelloWorld</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>hello</servlet-name>
-  	<url-pattern>/hw</url-pattern>
+    <servlet-name>hello</servlet-name>
+    <url-pattern>/hw</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>InitParam</servlet-name>
+    <servlet-class>com.javalec.ex.ServletInitParam</servlet-class>
+    <init-param>
+      <param-name>id</param-name>
+      <param-value>abcde</param-value>
+    </init-param>
+    <init-param>
+      <param-name>pw</param-name>
+      <param-value>12345</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>InitParam</servlet-name>
+    <url-pattern>/IP</url-pattern>
   </servlet-mapping>
 </web-app>
