Add features   * 404, 500 전체 페이지 예외처리 방식 학습

--- a/PracticeJSP/WebContent/WEB-INF/web.xml
+++ b/PracticeJSP/WebContent/WEB-INF/web.xml
@@ -47,4 +47,14 @@
     <servlet-name>InitParam</servlet-name>
     <url-pattern>/IP</url-pattern>
   </servlet-mapping>
+  
+  <error-page>
+  	<error-code>404</error-code>
+  	<location>/error404.jsp</location>
+  </error-page>
+  <error-page>
+  	<error-code>500</error-code>
+  	<location>/error500.jsp</location>
+  </error-page>
+  
 </web-app>
